<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            android:checked="true" /> <!-- checked=true لجعلها رمادية افتراضياً -->

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"
            android:title="@string/menu_notification" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/person"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_lock"
            android:title="@string/menu_logout" />
    </group>
</menu>